--- a/index.html
+++ b/index.html
@@ -23,22 +23,16 @@
     </header>
 
     <main>
-      <div class="form-container">
+      <!-- <div class="container">
         <img
           class="brand-logo"
           src="images/cammpixels_logo_cropped - no bg color.png"
-          alt="lblogo"
-          id="header-img"
+          alt="cammpixels logo"
         />
-      </div>
+      </div> -->
     </main>
 
     <footer>
-      <!-- <ul>
-        <li><a href="#">Privacy</a></li>
-        <li><a href="#">Terms</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul> -->
       <p>CONNECTING THE DOTS</p>
     </footer>
   </body>
