--- a/index.html
+++ b/index.html
@@ -10,30 +10,20 @@
   </head>
 
   <body>
-    <header id="header">
-      <div class="logo-container">
-        <!-- <img
-          class="brand-logo"
-          src="images/cammpixels_logo_cropped - no bg color.png"
-          alt="lblogo"
-          id="header-img"
-        /> -->
-        <p class="header-brand-name">CAMMPIXELS</p>
-      </div>
-    </header>
-
     <main>
-      <!-- <div class="container">
+      <div class="container">
         <img
           class="brand-logo"
           src="images/cammpixels_logo_cropped - no bg color.png"
           alt="cammpixels logo"
         />
-      </div> -->
+        <p class="brand-name">CAMMPIXELS</p>
+        <p class="brand-tag">CONNECTING THE DOTS</p>
+      </div>
     </main>
 
-    <footer>
+    <!-- <footer>
       <p>CONNECTING THE DOTS</p>
-    </footer>
+    </footer> -->
   </body>
 </html>
